# olive

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SAFETY.md  SECURITY.md  install.sh
.cargo/: config.toml
docs/: async.md  basics.md  cli.md  debugger.md  enums.md  error_handling.md  ffi.md  functions.md  generics.md  getting_started.md  index.md  internals.md  introduction.md  modules.md  optimizations.md  ownership.md  python.md  structs.md  traits.md
examples/: async_parallel_web_scraper_gather.liv  async_producer_consumer_channels.liv  async_tcp_multi_client_chat_server.liv  c_interop_libc_file_operations.liv  error_handling_try_propagation.liv  python_interop_numpy_matrix.liv  rust_interop_shared_library.liv  rust_math.rs
lib/: aio.liv  io.liv  json.liv  math.liv  net.liv  signal.liv  websocket.liv
parity/: 01_json_roundtrip.liv  01_json_roundtrip.py  02_dict_config.liv  02_dict_config.py  03_shuffle.liv  03_shuffle.py  04_sorted_key.liv  04_sorted_key.py  05_string_ops.liv  05_string_ops.py  06_math_stats.liv  06_math_stats.py  07_regex.liv  07_regex.py  08_datetime.liv  08_datetime.py  09_numpy_dot.liv  09_numpy_dot.py  10_counter.liv  10_counter.py  run.sh
src/: builtin_tests.rs  collection_method_tests.rs  drop_tests.rs  eq_tests.rs  fallible_parse_tests.rs  fmt.rs  hash_tests.rs  iteration_tests.rs  lambda_tests.rs  lib.rs  main.rs  mangle.rs  narrow_tests.rs  numeric_underscore_tests.rs  operator_dunder_tests.rs  opt_attr_tests.rs  power_tests.rs  regression_tests.rs  repeat_tests.rs  scalar_attr_tests.rs  small_reflex_tests.rs  test_utils.rs  (+9 more)
(+416 files in other folders)
