[workspace]
members = ["std_lib"]
default-members = [".", "std_lib"]

[package]
name = "pit"
version = "0.2.1"
edition = "2024"
authors = ["vinceswu"]
description = "The Olive programming language compiler"
license = "MIT"
repository = "https://github.com/ecnivslabs/olive"
keywords = ["compiler", "language", "olive"]
categories = ["compilers"]
autoexamples = false

[lib]
name = "pit"
path = "src/lib.rs"

[dependencies]
ariadne = "0.6.0"
clap = { version = "4.6.1", features = ["derive"] }
cranelift = "0.131.1"
cranelift-frontend = "0.131.1"
cranelift-jit = "0.131.1"
cranelift-module = "0.131.1"
cranelift-native = "0.131.1"
cranelift-object = "0.131.1"
libloading = "0.9.0"
rand = "0.10.1"
rustc-hash = "2.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8"
rustyline = { version = "14.0", default-features = false }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
lazy_static = "1.4"
openssl = { version = "0.10", features = ["vendored"] }
blake3 = "1"
tar = "0.4"
zstd = "0.13"
dirs = "5"
base64 = "0.22"
smol_str = "0.3.6"
semver = "1.0"
flate2 = "1.0"
pubgrub = "0.4.0"
ctrlc = "3.4"

[dev-dependencies]
proptest = "1.4"

[profile.release]
debug = 1
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
